--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
         <td><a href="./task2.html" target="_blank">Task 2 link</a></td>
       </tr>
       <tr>
-        <td>Task 1</td>
+        <td>Task 3</td>
         <td><a href="./task3.html" target="_blank">Task 3 link</a></td>
+      </tr>
+      <tr>
+        <td>Task 4</td>
+        <td><a href="./task4.html" target="_blank">Task 4 link</a></td>
       </tr>
     </table>
   </body>
 </html>
+
+<!-- https://sanvikakini.github.io/taskDemo/ -->
